# FOX-C

./: CMakeLists.txt  README.md  foxC.h  launchpad_message.asc  main  main.cpp  message.pgp  private-key.asc
debian/: README.Debian  README.source  autoreconf.after  autoreconf.before  changelog  control  copyright  debhelper-build-stamp  files  fox-c.cron.d.ex  fox-c.doc-base.ex  install  libfox-c.cron.d.ex  libfox-c.doc-base.ex  manpage.1.ex  manpage.md.ex  manpage.sgml.ex  manpage.xml.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  shlibs.local.ex  watch.ex
debian/libfox-c.dev/DEBIAN/: control  md5sums
debian/libfox-c.dev/usr/include/fox-c/header/: garbage.h  maths.h  priorityQ.h  run.h  trie.h  unionFind.h
debian/libfox-c.dev/usr/share/doc/libfox-c.dev/: README.Debian  copyright
debian/patches/: Fox-C  series
debian/source/: include-binaries
debian/upstream/: metadata.ex
header/: conditional.h  dsa.h  guard.h  loop.h  math.h  random.h  range.h  short.h  string.h  time.h
obj-x86_64-linux-gnu/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
